# flare-core

./: .gitignore  ARCHITECTURE_SUMMARY.md  CLIENT_CODE_OPTIMIZATION.md  CLIENT_CONFIG_ENHANCEMENT.md  CONNECTION_FACTORY_OPTIMIZATION.md  Cargo.toml  IMPLEMENTATION_STATUS.md  IM_GATEWAY_OVERVIEW.md  IM_GATEWAY_STATUS.md  LICENSE  LINKING_FEATURE_DESIGN.md  NOTICE  PROTOCOL_RACE_EXAMPLES_SUMMARY.md  PUBLISH.md  QUIC_IMPLEMENTATION.md  QUIC_IMPLEMENTATION_REVIEW.md  QUIC_SUMMARY.md  README.md  SERVER_CONFIG_MONITORING_REMOVAL.md  SERVER_CONNECTION_OPTIMIZATION.md  SYSTEM_COMPLETION_STATUS.md  build.rs  test_all_connections.sh  test_quic_aggregation.sh  test_quic_communication.sh  test_websocket_client.rs
_backup_2025-10-11/examples/: README.md  chat_server_example.rs
_backup_2025-10-11/proto/: commands.proto  frame.proto
_backup_2025-10-11/src/: lib.rs
benches/: perf_baseline.rs
certs/: client.crt  client.key  server.crt  server.key
doc/: PERFORMANCE_OPTIMIZATION.md  client-flare-mode-example.md  client-observer-mode-example.md  client-simple-mode-example.md  server-flare-mode-example.md  server-observer-mode-example.md  server-simple-mode-example.md
docs/: ADDING_NEW_SERIALIZER_GUIDE.md  ARCHITECTURE_REFACTORING_PLAN.md  CHAT_ROOM_FIX_SUMMARY.md  CLIENT_DESIGN.md  CLIENT_MODULE_SUMMARY.md  CODE_REDUNDANCY_ANALYSIS.md  COMMON_MODULES_ANALYSIS.md  COMMON_MODULE_COMPLETION_SUMMARY.md  COMMUNICATION_TEST_REPORT.md  COMPILATION_FIX_REPORT.md  COMPILATION_FIX_SUMMARY.md  COMPREHENSIVE_DEMO_GUIDE.md  COMPRESSION_IMPLEMENTATION_SUMMARY.md  COMPRESSION_MODULE_GUIDE.md  CONNECTION_STABILITY_STATUS.md  DEMO_UPDATE_SUMMARY.md  DESIGN_PRINCIPLES.md  EXAMPLES_AND_FIXES_SUMMARY.md  FINAL_STATUS.md  FIX_SUMMARY.md  IMPLEMENTATION_STATUS.md  IM_CONNECTION_STABILITY_OPTIMIZATION.md  IM_Long_Connection_Design.md  INTERACTIVE_CHAT_GUIDE.md  MESSAGE_PARSER_ARCHITECTURE.md  MESSAGE_PARSER_ENHANCEMENTS.md  MESSAGE_PARSER_IMPLEMENTATION_SUMMARY.md  MODULES_IMPLEMENTATION_PLAN.md  MODULE_AUDIT_SUMMARY.md  NEXT_STEPS.md  OPTIMIZATION_SCAN_REPORT.md  PRODUCTION_OPTIMIZATION_PLAN.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_READINESS_REPORT.md  QUICK_START_GUIDE.md  QUIC_DEMO_SUMMARY.md  REFACTORING_IMPLEMENTATION_GUIDE.md  REFACTORING_SUMMARY.md  SERIALIZATION_ARCHITECTURE_ANALYSIS.md  SERIALIZATION_EXAMPLES.md  (+15 more)
examples/: README.md  TEST_CHAT.md  architecture_demo.rs  auth_client.rs  auth_server.rs  auth_vs_connect.rs  chat_client_example.rs  client_auth.rs  client_demo.rs  client_server_serialization_test.rs  connect_with_platform.rs  connection_auth_analysis.md  custom_extensions_example.rs  flare_chat_client.rs  flare_chat_server.rs  generic_connection_demo.rs  heartbeat_demo.rs  hybrid_client.rs  hybrid_server.rs  negotiation_client.rs  negotiation_server.rs  observer_client.rs  observer_server.rs  protocol_race_demo.rs  quic_client.rs  quic_demo.rs  quic_server.rs  serialization_config_builder_example.rs  server_auth.rs  simple_chat_client.rs  simple_client.rs  simple_quic_chat_client.rs  simple_quic_chat_server.rs  simple_server.rs  tcp_client.rs  test_chat.sh  unified_client.rs  unified_server.rs  websocket_bidirectional_test.rs  websocket_client.rs  (+1 more)
examples/certs/: server.crt  server.key
examples/chat_room/: README.md  client.rs  server.rs
examples/client/: README.md  auth_client.rs  auth_example.rs  basic_client.rs  event_client.rs  fast_client.rs  fast_client_example.rs  protocol_race_client.rs  quic_client.rs  quick_test_client.rs  quick_test_quic_client.rs  websocket_client.rs
examples/common/: README.md  all_serializers_simple.rs  compression_demo.rs  connection_serialization_demo.rs  flexible_serializer_demo.rs  optimized_ultra_low_latency_demo.rs  protobuf_serialization_demo.rs  protocol_race_example.rs  quic_client_example.rs  quic_custom_hostname_example.rs  quic_protobuf_client.rs  quic_protobuf_communication_test.rs  quic_protobuf_echo_client.rs  quic_protobuf_echo_server.rs  quic_protobuf_server.rs  quic_protobuf_test.rs  quic_protobuf_test_script.rs  quic_server_example.rs  serialization_demo.rs  serialization_without_stats.rs  simple_quic_client.rs  simple_quic_server.rs  ultra_low_latency_demo.rs  unified_heartbeat_test.rs  unified_message_parser_demo.rs  websocket_client_example.rs  websocket_connection_demo.rs  websocket_server_example.rs  websocket_server_test.rs
examples/server/: README.md  auth_example.rs  auth_server_example.rs  connection_test.rs  dual_protocol_server.rs  fast_server_example.rs  quic_server.rs  server_connection_event_example.rs  websocket_server.rs
examples/wasm_websocket_client/: Cargo.toml  README.md  build.sh  index.html  run_local.sh  serve.sh
examples/wasm_websocket_client/src/: lib.rs  tokio_runtime.rs  wasm_utils.rs
examples/ws/: client.rs  server.rs
proto/: commands.proto  frame.proto
scripts/: comprehensive_test.sh  generate_cert.sh  quick_chat_test.sh  test_multi_user_chat.sh  test_new_architecture.sh  test_quic.sh  test_tls_demo.sh  verify.sh
src/: lib.rs
src/client/: README.md  REFACTOR_DESIGN.md  auth.rs  client.rs  config.rs  connection_manager.rs  enhanced_client.rs  event.rs  events.rs  fast.rs  manager.rs  mod.rs  protocol_racer.rs  protocol_racing.rs  quic.rs  quic_connector.rs  reconnect.rs  router.rs  runtime.rs  unified.rs  wasm_tokio.rs  websocket.rs  websocket_connector.rs  说明.txt
src/common/: README.md  cert_utils.rs  client_trait.rs  config.rs  config_types.rs  connection_manager.rs  connection_state.rs  constants.rs  conversation.rs  device.rs  error.rs  features.rs  heartbeat.rs  message.rs  message_observer.rs  mod.rs  protobuf_decoder.rs  protocol.rs  serializer.rs  server_trait.rs  session_id.rs  utils.rs
temp_certs/: cert.pem  key.pem
tests/: client_test.rs  connection_manager_integration_test.rs  connection_manager_test.rs  error_handling_test.rs  examples_quality.rs  heartbeat_functionality_test.rs  protocol_contracts.rs  server_connection_event_test.rs  server_test.rs  user_connection_manager_integration_test.rs  user_connection_manager_test.rs  wasm_source_contracts.rs
(+289 files in other folders)
