[package]
name = "flare-core"
version = "0.1.0"
edition = "2021"
description = "Flare Core - 高性能、可靠的即时通讯长连接工具包"
keywords = ["websocket", "quic"]
authors = ["Flare Team"]
license = "MIT"
repository = "https://github.com/flare-team/flare-core"
homepage = "https://flare-core.dev"
documentation = "https://docs.rs/flare-core"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.14"
bytes = "1"
async-trait = "0.1"
quinn = "0.11"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
lazy_static = "1.4"
url = "2.5"
rcgen = "0.14"
rustls-pemfile = "2"
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
prost-build = "0.14"

[features]
default = []