[package]
name = "flare-core"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "A high-performance, reliable long-connection communication toolkit for Rust, supporting WebSocket and QUIC protocols with features like authentication, device management, serialization negotiation, and protocol racing."
keywords = ["websocket", "quic", "long-connection"]
categories = ["network-programming", "asynchronous", "web-programming"]
authors = ["Flare Team"]
license = "MIT"
repository = "https://github.com/flare-team/flare-core"
homepage = "https://github.com/flare-team/flare-core"
documentation = "https://docs.rs/flare-core"
readme = "README.md"
exclude = [
    "target/",
    "Cargo.lock",
    "examples/",
    "scripts/",
    "doc/",
    "certs/",
    ".git/",
    ".github/",
    "*.md",
    "!README.md",
]

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.14"
bytes = "1"
async-trait = "0.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
lazy_static = "1.4"
url = "2.5"
rustls-pemfile = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# 会话ID生成所需依赖
sha2 = "0.10"
hex = "0.4"
# 加密所需依赖
aes-gcm = "0.10"
rand = "0.8"
 
anyhow = "1.0"
rcgen = "0.14"

[build-dependencies]
prost-build = "0.14"

# 非 wasm 平台的网络依赖
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
ulid = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_compat = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]

[features]
default = []
