[package]
name = "flare-core-wasm-example"
version = "0.1.0"
edition = "2024"
publish = false
description = "WebAssembly WebSocket client demo for flare-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
console_error_panic_hook = "0.1"
flare-core = { path = "../.." }
futures-channel = "0.3"
js-sys = "0.3"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt", "time"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# 独立 workspace，避免继承 flare-im 根 workspace 导致 wasm-pack 构建异常
[workspace]
